Added working social media links and project links.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Joe's Coding Portfolio</title>
     <link rel="stylesheet" href="./assets/css/reset.css" />
     <link rel="stylesheet" href="./assets/css/style.css" />
+    <link rel="stylesheet" href="./assets/css/all.min.css"/>
 </head>
 
 <body>
@@ -27,16 +28,16 @@
         </nav>
     </header>
 
-    <!-- Intro -->
+    <!-- Intro Section -->
     <section class="intro" id="home">
         <h1 class="section__title section__title--intro">
             Hi, I am <strong>Joe Park</strong>
         </h1>
-        <p class="section__subtitle section__subtitle--intro">Aspring full-stack dev</p>
+        <p class="section__subtitle section__subtitle--intro">Aspiring full-stack dev</p>
         <img src="./assets/images/Me.jpg" alt="A picture of Joe Park" class="intro__img">
     </section>
 
-    <!-- About Me -->
+    <!-- About Me Section -->
     <section class="about-me" id="about">
         <h2 class="section__title section__title--about">About Me</h2>
         <p class="section__subtitle section__subtitle--about"></p>
@@ -46,47 +47,45 @@
             <p>Proin sapien ante, tempor et nisl sollicitudin, semper accumsan lacus. Curabitur pellentesque nunc ac purus porttitor, in venenatis lectus fringilla. Quisque nibh massa, fermentum ac nunc et, tincidunt blandit ipsum. Pellentesque consectetur pulvinar dui in auctor. Mauris ac feugiat ipsum. Aenean ornare ante sed pretium pulvinar. Nulla in placerat ante. Proin vel enim ut dui placerat laoreet at eget eros. Fusce quis sodales mauris.</p>
         </div>
 
-        <img src="./assets/images/Me.jpg" alt="Image of Joe Park" class="about-me__img">
+        <img src="./assets/images/Texas State Capital Rotunda.jpg" alt="Texas State Capital Rotunda" class="about-me__img">
     </section>
 
-    <!-- My Projects -->
+    <!-- Projects Section -->
     <section class="my-projects" id="projects">
         <h2 class ="section__title--projects">My Projects</h2>
         <p class="section__subtitle--projects">A selection of my projects</p>
 
         <div class="portfolio">
             <!-- Portfolio Item #1 -->
-            <a href="#" class="portfolio__item">
-                <img src="./assets/images/Projects.jpg" alt="" class="portfolio__img">
+            <a href="https://github.com/jonesliddy77/Persona" class="portfolio__item">
+                <img src="./assets/images/Persona.gif" alt="Persona Project" class="portfolio__img">
+                <figcaption>.Persona</figcaption>
             </a>
             <!-- Portfolio Item #2 -->
-            <a href="#" class="portfolio__item">
-                <img src="./assets/images/Projects.jpg" alt="" class="portfolio__img">
+            <a href="https://github.com/Ysdra/Agenda_Web_App" class="portfolio__item">
+                <img src="./assets/images/Work Day Scheduler Screenshot.png " alt="Work Day Planner" class="portfolio__img">
+                <figcaption>Agenda Web App</figcaption>
             </a>
             <!-- Portfolio Item #3 -->
-            <a href="#" class="portfolio__item">
-                <img src="./assets/images/Projects.jpg" alt="" class="portfolio__img">
-            </a>
-            <!-- Portfolio Item #4  -->
-            <a href="#" class="portfolio__item">
-                <img src="./assets/images/Projects.jpg" alt="" class="portfolio__img">
-            </a>
-            <!-- Portfolio Item #5 -->
-            <a href="#" class="portfolio__item">
-                <img src="./assets/images/Projects.jpg" alt="" class="portfolio__img">
-            </a>
-            <!-- Portfolio Item #6 -->
-            <a href="#" class="portfolio__item">
-                <img src="./assets/images/Projects.jpg" alt="" class="portfolio__img">
+            <a href="https://github.com/Ysdra/Weather_Status_Checker" class="portfolio__item">
+                <img src="./assets/images/Weather Application Live Image.png" alt="Weather App" class="portfolio__img">
+                <figcaption>Weather Web App</figcaption>
             </a>
         </div>
   </section>
 
-  <!-- Footer -->
+  <!-- Footer Section -->
   <footer class="footer">
       <h1>Contact Me</h1>
-    <a href="mailto:joseph.m.park@utexas.edu" class="footer__link">josep.m.park@utexas.edu</a>
+    <a href="mailto:joseph.m.park@utexas.edu" class="footer__link">joseph.m.park@utexas.edu (832) 525-5051</a>
+    <a href="https://www.linkedin.com/in/joeparkuipath/" class="footer__link">
+        <i class="fab fa-linkedin"></i>  
+    </a>
+    <a href="https://github.com/Ysdra" class="footer__link">
+        <i class="fab fa-github-square"></i>
+    </a>
   </footer>
 
 </body>
 </html>
+
