fixed some css styling for the main page

--- a/index.html
+++ b/index.html
@@ -16,14 +16,11 @@
         <div class="logo">
             <img src="./assets/images/Logo.png" alt="Joe Park Logo">
         </div>
-        <button class="nav-toggle" aria-label="toggle navigation">
-            <span class="hamburger"></span>
-        </button>
         <nav class="nav">
-             <ul class="nav__list">
-                 <li class="nav__item"><a href="#home" class="nav__link">Home</a></li>
-                 <li class="nav__item"><a href="#about" class="nav__link">About Me</a></li>
-                 <li class="nav__item"><a href="#projects" class="nav__link">My Projects</a></li>
+             <ul>
+                 <li><a href="#home">Home</a></li>
+                 <li><a href="#about">About Me</a></li>
+                 <li><a href="#projects">My Projects</a></li>
              </ul>
         </nav>
     </header>
@@ -85,6 +82,8 @@
         <i class="fab fa-github-square"></i>
     </a>
   </footer>
+
+  <script src="./assets/script.js"></script>
 
 </body>
 </html>
