added resume file

--- a/index.html
+++ b/index.html
@@ -40,8 +40,9 @@
         <p class="section__subtitle section__subtitle--about"></p>
 
         <div class="about me__body">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur venenatis consectetur vestibulum. Ut orci metus, ultricies at ligula in, accumsan condimentum neque. Nulla ante lacus, iaculis non iaculis sit amet, tempor sed nibh. Suspendisse aliquet commodo arcu. Pellentesque ac lacus elit. Mauris iaculis diam magna, quis tempor eros sodales id. Cras bibendum consectetur malesuada. Donec varius iaculis tincidunt. Nulla ac scelerisque arcu, vel consectetur nisl. Fusce tincidunt blandit nunc, eu aliquam est convallis tempor. In imperdiet feugiat interdum. Duis ut dignissim justo. Nam aliquam finibus pretium.</p>
-            <p>Proin sapien ante, tempor et nisl sollicitudin, semper accumsan lacus. Curabitur pellentesque nunc ac purus porttitor, in venenatis lectus fringilla. Quisque nibh massa, fermentum ac nunc et, tincidunt blandit ipsum. Pellentesque consectetur pulvinar dui in auctor. Mauris ac feugiat ipsum. Aenean ornare ante sed pretium pulvinar. Nulla in placerat ante. Proin vel enim ut dui placerat laoreet at eget eros. Fusce quis sodales mauris.</p>
+            <p>Hey Y'all, my name is Joe and I am an aspiring full-stack web developer who is currently enrolled at the UT Austin coding bootcamp. I graduated from UT Austin in 2018 with a degree in Economics and 
+               currently already work full-time in the tech industry in Austin, Texas. Feel free to reach out to me via my contact links at the bottom of this portfolio! 
+            </p>
         </div>
 
         <img src="./assets/images/Texas State Capital Rotunda.jpg" alt="Texas State Capital Rotunda" class="about-me__img">
@@ -81,6 +82,7 @@
     <a href="https://github.com/Ysdra" class="footer__link">
         <i class="fab fa-github-square"></i>
     </a>
+    <a href="./assets/Resume.pdf">Resume</a>
   </footer>
 
   <script src="./assets/script.js"></script>
