subbed the repo links for the live deployed versions

--- a/index.html
+++ b/index.html
@@ -55,17 +55,17 @@
 
         <div class="portfolio">
             <!-- Portfolio Item #1 -->
-            <a href="https://github.com/jonesliddy77/Persona" class="portfolio__item">
+            <a href="https://jonesliddy77.github.io/Persona/" class="portfolio__item">
                 <img src="./assets/images/Persona.gif" alt="Persona Project" class="portfolio__img">
                 <figcaption>.Persona</figcaption>
             </a>
             <!-- Portfolio Item #2 -->
-            <a href="https://github.com/Ysdra/Agenda_Web_App" class="portfolio__item">
+            <a href="https://ysdra.github.io/Agenda_Web_App/" class="portfolio__item">
                 <img src="./assets/images/Work Day Scheduler Screenshot.png " alt="Work Day Planner" class="portfolio__img">
                 <figcaption>Agenda Web App</figcaption>
             </a>
             <!-- Portfolio Item #3 -->
-            <a href="https://github.com/Ysdra/Weather_Status_Checker" class="portfolio__item">
+            <a href="https://ysdra.github.io/Weather_Status_Checker/" class="portfolio__item">
                 <img src="./assets/images/Weather Application Live Image.png" alt="Weather App" class="portfolio__img">
                 <figcaption>Weather Web App</figcaption>
             </a>
