Added project 2 to the my portfolio.

--- a/index.html
+++ b/index.html
@@ -69,6 +69,11 @@
                 <img src="./assets/images/Weather Application Live Image.png" alt="Weather App" class="portfolio__img">
                 <figcaption>Weather Web App</figcaption>
             </a>
+            <!-- Portfolio Item #4 -->
+            <a href="https://github.com/Portmeister/budgetApp" class="portfolio__item">
+                <img src="./assets/images/Budget_App.gif" alt="Budget App Project" class="portfolio__img">
+                <figcaption>Budget App</figcaption>
+            </a>
         </div>
   </section>
 
